--- a/Source/Vehicle/ToolsForHaul.csproj
+++ b/Source/Vehicle/ToolsForHaul.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\RimWorldWin_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -51,23 +52,26 @@
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
       <HintPath>..\..\..\..\RimWorldWin_Data\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Backpack\Apparel_Backpack.cs" />
     <Compile Include="RightTools\_ThinkNode_JobGiver.cs" />
     <Compile Include="RightTools\RightTools.cs" />
-    <Compile Include="RightTools\Class3.cs" />
+    <Compile Include="Comps\MapComponent_ToolsForHaul.cs" />
     <Compile Include="RightTools\MapComponentInjector.cs" />
-    <Compile Include="RightTools\SpecialInjector.cs" />
-    <Compile Include="RightTools\Detours.cs" />
+    <Compile Include="NoCCL\SpecialInjector.cs" />
+    <Compile Include="NoCCL\Detours.cs" />
+    <Compile Include="StatsHelper.cs" />
     <Compile Include="ToolsForHaulUtility.cs" />
     <Compile Include="Trace.cs" />
     <Compile Include="JobDrivers\JobDriver_Standby.cs" />
     <Compile Include="JobDrivers\JobDriver_HaulWithAnimalCart.cs" />
     <Compile Include="Toils\Toils_Cart.cs" />
+    <Compile Include="WorkGivers\WorkGiver_EquipTools.cs" />
     <Compile Include="WorkGivers\WorkGiver_HaulWithCart.cs" />
-    <Compile Include="Vehicles\CompMountable.cs" />
+    <Compile Include="Comps\CompMountable.cs" />
     <Compile Include="Designators\Designator_ApplyMedicine.cs" />
     <Compile Include="Designators\Designator_Mount.cs" />
     <Compile Include="Designators\Designator_PutInInventory.cs" />
@@ -80,7 +84,7 @@
     <Compile Include="JobDrivers\JobDriver_HaulWithCart.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="JobDrivers\JobDriver_Board.cs" />
+    <None Include="JobDrivers\JobDriver_Board.cs" />
     <Compile Include="JobDrivers\JobDriver_DismountInBase.cs" />
     <Compile Include="JobDrivers\JobDriver_HaulWithBackpack.cs" />
     <Compile Include="JobDrivers\JobDriver_MakeMount.cs" />
@@ -89,12 +93,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Toils\Toils_Collect.cs" />
     <Compile Include="Vehicles\Vehicle_Cart.cs" />
-    <Compile Include="Designators\Designator_Board.cs" />
+    <None Include="Designators\Designator_Board.cs" />
     <Compile Include="Designators\Designator_Move.cs" />
-    <Compile Include="Vehicles\Vehicle_Saddle.cs" />
+    <None Include="Vehicles\Vehicle_Saddle.cs" />
     <Compile Include="WorkGivers\WorkGiver_HaulWithBackpack.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\..\Defs\JobDefs\Jobs_Misc.xml">
+      <Link>Defs\Jobs_Misc.xml</Link>
+    </Content>
+    <Content Include="..\..\Defs\KeyBindingDefs\KeyBindings.xml">
+      <Link>Defs\KeyBindingDefs\KeyBindings.xml</Link>
+    </Content>
     <Content Include="..\..\Defs\StatDefs\Stats_Apparel.xml">
       <Link>Defs\StatDefs\Stats_Apparel.xml</Link>
     </Content>
@@ -106,6 +116,24 @@
     </Content>
     <Content Include="..\..\Defs\ThingDefs\Vehicle_Haul.xml">
       <Link>Defs\ThingDefs\Vehicle_Haul.xml</Link>
+    </Content>
+    <Content Include="..\..\Defs\WorkGiverDefs\WorkGivers.xml">
+      <Link>Defs\WorkGivers.xml</Link>
+    </Content>
+    <Content Include="..\..\Languages\English\Keyed\Designators.xml">
+      <Link>Languages\English\Designators.xml</Link>
+    </Content>
+    <Content Include="..\..\Languages\English\Keyed\FloatMenu.xml">
+      <Link>Languages\English\FloatMenu.xml</Link>
+    </Content>
+    <Content Include="..\..\Languages\English\Keyed\GameplayCommands.xml">
+      <Link>Languages\English\GameplayCommands.xml</Link>
+    </Content>
+    <Content Include="..\..\Languages\English\Keyed\ITabs.xml">
+      <Link>Languages\English\ITabs.xml</Link>
+    </Content>
+    <Content Include="..\..\Languages\English\Keyed\Misc_Gameplay.xml">
+      <Link>Languages\English\Misc_Gameplay.xml</Link>
     </Content>
   </ItemGroup>
   <ItemGroup />
