--- a/Source/Vehicle/ToolsForHaul.csproj
+++ b/Source/Vehicle/ToolsForHaul.csproj
@@ -29,8 +29,7 @@
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\..\Assemblies\</OutputPath>
-    <DefineConstants>
-    </DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <UseVSHostingProcess>false</UseVSHostingProcess>
@@ -77,7 +76,7 @@
     <Compile Include="Designators\Designator_ApplyMedicine.cs" />
     <Compile Include="Designators\Designator_Mount.cs" />
     <Compile Include="Designators\Designator_PutInInventory.cs" />
-    <Compile Include="Backpack\Gizmo_BackpackEquipment.cs" />
+    <Compile Include="Gizmos\Gizmo_BackpackEquipment.cs" />
     <Compile Include="ITabs\ITab_Pawn_VehicleGear.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -95,9 +94,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Toils\Toils_Collect.cs" />
     <Compile Include="Vehicles\Vehicle_Cart.cs" />
-    <None Include="Designators\Designator_Board.cs" />
+    <Compile Include="Designators\Designator_Board.cs" />
     <Compile Include="Designators\Designator_Move.cs" />
-    <None Include="Vehicles\Vehicle_Saddle.cs" />
+    <Compile Include="Vehicles\Vehicle_Saddle.cs" />
     <Compile Include="WorkGivers\WorkGiver_HaulWithBackpack.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -110,11 +109,17 @@
     <Content Include="..\..\Defs\StatDefs\Stats_Apparel.xml">
       <Link>Defs\StatDefs\Stats_Apparel.xml</Link>
     </Content>
+    <Content Include="..\..\Defs\ThingCategoryDefs\ThingCategories.xml">
+      <Link>Defs\ThingCategories.xml</Link>
+    </Content>
     <Content Include="..\..\Defs\ThingDefs\Apparel_Backpack.xml">
       <Link>Defs\ThingDefs\Apparel_Backpack.xml</Link>
     </Content>
     <Content Include="..\..\Defs\ThingDefs\Items_Unfinished.xml">
       <Link>Defs\ThingDefs\Items_Unfinished.xml</Link>
+    </Content>
+    <Content Include="..\..\Defs\ThingDefs\Vehicles_unused.xml">
+      <Link>Defs\ThingDefs\Vehicles_unused.xml</Link>
     </Content>
     <Content Include="..\..\Defs\ThingDefs\Vehicle_Haul.xml">
       <Link>Defs\ThingDefs\Vehicle_Haul.xml</Link>
