--- a/Source/Vehicle/ToolsForHaul.csproj
+++ b/Source/Vehicle/ToolsForHaul.csproj
@@ -57,26 +57,25 @@
   <ItemGroup>
     <None Include="ARB\Class1.cs" />
     <Compile Include="ARB\StatWorker_MoveSpeed.cs" />
-    <Compile Include="ARB\CompAxles.cs" />
-    <Compile Include="ARB\CompProperties_Axles.cs" />
-    <Compile Include="ARB\CompProperties_Vehicles.cs" />
-    <Compile Include="ARB\CompVehicles.cs" />
+    <Compile Include="Comps\CompAxles.cs" />
+    <Compile Include="Comps\CompProperties_Axles.cs" />
+    <Compile Include="Comps\CompProperties_Vehicles.cs" />
+    <Compile Include="Comps\CompVehicles.cs" />
     <Compile Include="Backpack\Apparel_Backpack.cs" />
     <None Include="JobDrivers\Class1.cs" />
     <None Include="Designators\Vehicle\Class1.cs" />
     <None Include="Designators\Vehicle\Class2.cs" />
-    <Compile Include="CCL\Class1.cs" />
-    <Compile Include="CCL\Class2.cs" />
-    <Compile Include="CCL\Class4.cs" />
-    <Compile Include="CCL\Class5.cs" />
+    <Compile Include="CCL\ModHelperDef.cs" />
+    <Compile Include="CCL\CompInjectionSet.cs" />
+    <Compile Include="CCL\DefInjectionQualifier.cs" />
     <Compile Include="CR\IncendiaryFuel.cs" />
-    <Compile Include="RA\CompWeaponExtensions.cs" />
+    <Compile Include="Comps\CompWeaponExtensions.cs" />
     <None Include="RA\RA_PawnRenderer.cs" />
-    <Compile Include="RA\CompTool.cs" />
-    <Compile Include="RA\JobDriver_PutInSlot.cs" />
-    <Compile Include="RA\CompEquipmentGizmoUser.cs" />
-    <Compile Include="RA\CompSlots.cs" />
-    <Compile Include="RA\CompEquipmentGizmoProvider.cs" />
+    <Compile Include="Comps\CompTool.cs" />
+    <Compile Include="JobDrivers\JobDriver_PutInSlot.cs" />
+    <Compile Include="Comps\CompEquipmentGizmoUser.cs" />
+    <Compile Include="Comps\CompSlots.cs" />
+    <Compile Include="Comps\CompEquipmentGizmoProvider.cs" />
     <Compile Include="Designators\Designator_PutInSlot.cs" />
     <Compile Include="RightTools\_ThinkNode_JobGiver.cs" />
     <Compile Include="RightTools\RightTools.cs" />
